--- a/style.css
+++ b/style.css
@@ -1,87 +1,90 @@
-
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
-
-.container {
-    background-color: rgba(52, 150, 230, 0.493);
-    min-height: 100vh;
-    border: 10px solid #1d1e4c
-}
-
-.content {
-
+  }
+  
+  body {
+    background-color: #ccc;
+  }
+  .container {
     max-width: 900px;
-    margin: 0  auto;
-}
-.top_section{
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-.top_section h1{
-    font-size: 50px;
-    font-weight: bold;
-    color: #1d1e4c;
-    text-transform: uppercase;
-}
-.top_section h4 {
-  font-size: 30px;
-  text-align: end;
-
-
-}
-
-
-.image_container{
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-
-.image_container,
-img {
-    width: 300px;
-    height: 320px;
-}
-
-.about_section {
+    margin: 0 auto;
+  }
+  
+  .apply_box {
+    max-width: 600px;
+    padding: 20px;
+    background-color: white;
+    margin: 0 auto;
     margin-top: 50px;
-}
-
-.about_section h2 {
-    font-size: 70px;
-    font-weight: 400px;
-    margin-bottom: 20px;
-}
-.about_section p{
+    box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.1);
+    border-radius: 10px;
+  }
+  
+  .title_small {
     font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 1.2px;
-    text-align: justify
-}
-
-biography_section {
-    margin- 50px 0;
-}
-
-.biography_section h3{
-    margin-bottom: 20px;
-}
-
-.biography_section ul {
-    margin-bottom: 15px;
-}
-
-footer{
-    margin: 50px 0;
-
-}
-
-footer p {
-    text-align:end ;
-}
-    
+  }
+  
+  .form_container {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+  }
+  .form_control {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  label {
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
+  
+  input,
+  select,
+  textarea {
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 15px;
+  }
+  
+  input:focus {
+    outline-color: red;
+  }
+  
+  .button_container {
+    display: flex;
+  
+    justify-content: flex-end;
+    margin-top: 20px;
+  }
+  button {
+    background-color: red;
+    border: transparent solid 2px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 8px;
+    transition: 0.3s ease-in;
+  }
+  button:hover {
+    background-color: #ccc;
+    border: 2px solid red;
+    color: black;
+    transition: 0.3s ease-out;
+    cursor: pointer;
+  }
+  .textarea_control {
+    grid-column: 1 / span 2;
+  }
+  .textarea_control textarea {
+    width: 100%;
+  }
+  
+  @media (max-width: 460px) {
+    .textarea_control {
+      grid-column: 1 / span 1;
+    }
+  } ;
